--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
             android:paddingTop="-50dp"
@@ -17,7 +12,5 @@
             android:layout_height="wrap_content"
             tools:listitem="@layout/item_android" />
 
-    </GridLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
